@@ -240,6 +240,31 @@ ctx.cvs_filename_decoder = CVSTextDecoder(
     #fallback_encoding='ascii'
     )
 
+# Template for the commit message to be used for initial project
+# commits.
+ctx.initial_project_commit_message = (
+    'Standard project directories initialized by cvs2svn.'
+    )
+
+# Template for the commit message to be used for post commits, in
+# which modifications to a vendor branch are copied back to trunk.
+# This message can use '%(revnum)d' to include the revision number of
+# the revision that included the change to the vendor branch.
+ctx.post_commit_message = (
+    'This commit was generated by cvs2svn to compensate for '
+    'changes in r%(revnum)d, which included commits to RCS files '
+    'with non-trunk default branches.'
+    )
+
+# Template for the commit message to be used for commits in which
+# symbols are created.  This message can use '%(symbol_type)d' to
+# include the type of the symbol ('branch' or 'tag') or
+# '%(symbol_name)' to include the name of the symbol.
+ctx.symbol_commit_message = (
+    "This commit was manufactured by cvs2svn to create %(symbol_type)s "
+    "'%(symbol_name)s'."
+    )
+
 # Some CVS clients for MacOS store resource fork data into CVS along
 # with the file contents itself by wrapping it all up in a container
 # format called "AppleSingle".  Subversion currently does not support
